--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,8 @@
     <body>
         {% block body %}
             {% block home %} {% endblock %}
+            {% block details %} {% endblock %}
+            {% block update %} {% endblock %}
         {% endblock %}
     </body>
 </html>
