--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
             {% block home %} {% endblock %}
             {% block details %} {% endblock %}
             {% block update %} {% endblock %}
+            {% block delete %} {% endblock %}
+            {% block insert %} {% endblock %}
         {% endblock %}
     </body>
 </html>
