--- a/templates/bezoeker/index.html.twig
+++ b/templates/bezoeker/index.html.twig
@@ -1,30 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block home %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Nummer</th>
-            <th scope="col">Model</th>
-            <th scope="col">Type</th>
-            <th scope="col">Prijs(euro)</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for auto in autos %}
-        <tr>
-            <td>{{ auto.id }}</td>
-            <td>{{ auto.model }}</td>
-            <td>{{ auto.type }}</td>
-            <td>{{ auto.prijs| number_format(0,'','.') }}</td>
-            <td class="link"><a href="{{ path('app_details', {id:auto.id}) }}">deails</a></td>
-            <td class="link"><a href="{{ path('app_update', {id:auto.id}) }}">update</a></td>
-            <td class="link"><a href="#">delete</a></td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <a href="#">Insert</a>
+    {% for message in app.flashes('warning') %}
+        <div class="container-fluid">
+            <div class="col-12 bg-warning">{{ message }}</div>
+        </div>
+    {% endfor %}
+    <div class="container-fluid">
+        <div class="row">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Nummer</th>
+                    <th scope="col">Model</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Prijs(euro)</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for auto in autos %}
+                    <tr>
+                        <td>{{ auto.id }}</td>
+                        <td>{{ auto.model }}</td>
+                        <td>{{ auto.type }}</td>
+                        <td>{{ auto.prijs| number_format(0,'','.') }}</td>
+                        <td class="link"><a href="{{ path('app_details', {id:auto.id}) }}">deails</a></td>
+                        <td class="link"><a href="{{ path('app_update', {id:auto.id}) }}">update</a></td>
+                        <td class="link"><a href="{{ path('app_delete', {id:auto.id}) }}">delete</a></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            <a href="{{ path('app_insert') }}">Insert</a>
+        </div>
+    </div>
 
     <style>
         .table thead th {
